@@ -1,6 +1,9 @@
 package az.edu.ada.wm2.lab6.service;
 
 import az.edu.ada.wm2.lab6.model.Product;
+import az.edu.ada.wm2.lab6.model.dto.ProductRequestDto;
+import az.edu.ada.wm2.lab6.model.dto.ProductResponseDto;
+import az.edu.ada.wm2.lab6.model.mapper.ProductMapper;
 import az.edu.ada.wm2.lab6.repository.ProductRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -9,66 +12,88 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl implements ProductService {
+
     private final ProductRepository productRepository;
+    private final ProductMapper productMapper;
 
     @Autowired
-    public ProductServiceImpl(ProductRepository productRepository) {
+    public ProductServiceImpl(ProductRepository productRepository,
+                              ProductMapper productMapper) {
         this.productRepository = productRepository;
+        this.productMapper = productMapper;
     }
 
     @Override
-    public Product createProduct(Product product) {
-        if (product.getId() == null) {
-            product.setId(UUID.randomUUID());
-        }
-        return productRepository.save(product);
+    public ProductResponseDto createProduct(ProductRequestDto product) {
+
+        Product entity = productMapper.toEntity(product);
+
+        Product saved = productRepository.save(entity);
+
+        return productMapper.toResponseDto(saved);
     }
 
     @Override
-    public Product getProductById(UUID id) {
-        return productRepository.findById(id)
+    public ProductResponseDto getProductById(UUID id) {
+
+        Product product = productRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+
+        return productMapper.toResponseDto(product);
     }
 
     @Override
-    public List<Product> getAllProducts() {
-        return productRepository.findAll();
+    public List<ProductResponseDto> getAllProducts() {
+
+        return productRepository.findAll()
+                .stream()
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 
     @Override
-    public Product updateProduct(UUID id, Product product) {
-        if (!productRepository.existsById(id)) {
-            throw new RuntimeException("Product not found with id: " + id);
-        }
-        product.setId(id);
-        return productRepository.save(product);
+    public ProductResponseDto updateProduct(UUID id, ProductRequestDto product) {
+
+        Product existing = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Product not found with id: " + id));
+
+        existing.setProductName(product.getProductName());
+        existing.setPrice(product.getPrice());
+        existing.setExpirationDate(product.getExpirationDate());
+
+        Product updated = productRepository.save(existing);
+
+        return productMapper.toResponseDto(updated);
     }
 
     @Override
     public void deleteProduct(UUID id) {
+
         if (!productRepository.existsById(id)) {
             throw new RuntimeException("Product not found with id: " + id);
         }
+
         productRepository.deleteById(id);
     }
-
     @Override
-    public List<Product> getProductsExpiringBefore(LocalDate date) {
+    public List<ProductResponseDto> getProductsExpiringBefore(LocalDate date) {
         return productRepository.findAll().stream()
-                .filter(product -> product.getExpirationDate() != null && 
-                        product.getExpirationDate().isBefore(date))
-                .collect(Collectors.toList());
+                .filter(p -> p.getExpirationDate() != null &&
+                        p.getExpirationDate().isBefore(date))
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 
     @Override
-    public List<Product> getProductsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
+    public List<ProductResponseDto> getProductsByPriceRange(BigDecimal minPrice, BigDecimal maxPrice) {
         return productRepository.findAll().stream()
-                .filter(product -> product.getPrice().compareTo(minPrice) >= 0 && 
-                        product.getPrice().compareTo(maxPrice) <= 0)
-                .collect(Collectors.toList());
+                .filter(p -> p.getPrice().compareTo(minPrice) >= 0 &&
+                        p.getPrice().compareTo(maxPrice) <= 0)
+                .map(productMapper::toResponseDto)
+                .toList();
     }
 }
+
